--- a/css/style.css
+++ b/css/style.css
@@ -1217,4 +1217,52 @@ fieldset {
           transform: translateX(-50%);
 }
 
+.error {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+
+  padding-top: 300px;
+
+  text-align: center;
+  vertical-align: middle;
+
+  background-color: rgba(255, 86, 53, 0.9);
+}
+
+.error__message,
+.error__title {
+  position: relative;
+  //max-width: 550px;
+
+  color: #ffffff;
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.error__title::before {
+  content: "";
+  position: absolute;
+
+  top: -150px;
+  left: 50%;
+
+  width: 109px;
+  height: 122px;
+
+  background-image: url("../img/muffin-white.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
